2007-12-15  Gil Forcada  <gforcada@svn.gnome.org>

	* data/main.css:
	Added a new class that puts a GNOME foot in the lists
	* templates/list-releases.tmpl:
	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-teams.tmpl:
	Updated the lists to show the foot logo instead of a dot

2007-12-15  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/list-languages.tmpl:
	fixed a corner case where it wasn't xhtml compliant
	* templates/list-modules.tmpl: display modules a-la languages (3 columns)
	* templates/people.tmpl: display modules a-la languages (3 columns)


2007-12-12  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gnome-screensaver and nautilus-cd-burner branched for gnome-2-20

2007-12-11  Johannes Schmid <jhs@gnome.org>

	* people.xml.in: Added Massimo Furlani
	* tranlation-teams-xml.in: Added Friulian translation team

2007-12-06  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: New module 'conduit' in Extra release set.

2007-12-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Deleted scaffold, as it has been moved to the
	archives.

2007-12-04  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/people.tmpl:
	Make it xhtml compliant and fixed an issue that prevents to show the
	/data/nobody.png (the if condition was wrong)

2007-12-04  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gnome-terminal branched for gnome-2-20

2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gucharmap branched for gnome-2-20

2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in: Added totem-pl-parser and Bastien as a maintainer
	of it and for totem too
	* releases.xml.in: Added totem-pl-parser to GNOME 2.22 release set and
	removed cheese from gnome-extras since it is in Proposed set

2007-12-03  Gil Forcada  <gforcada@svn.gnome.org>
