@@ -344,10 +344,11 @@
     <branch id="gnome-2-14" stringfrozen="true"/>
   </module>
   <module id="file-roller">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="firestarter">
     <branch id="HEAD"/>
