@@ -472,7 +472,7 @@
       <module id="evolution-exchange" branch="gnome-2-20"/>
       <module id="evolution-webcal"/>
       <module id="fast-user-switch-applet"/>
-      <module id="file-roller"/>
+      <module id="file-roller" branch="gnome-2-20"/>
       <module id="gcalctool" branch="gnome-2-20"/>
       <module id="gconf-editor"/>
       <module id="gdm" branch="gnome-2-20"/>
