@@ -1,5 +1,11 @@
 2007-12-15  Gil Forcada  <gforcada@svn.gnome.org>
 
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	file-roller branched for gnome-2-20
+
+2007-12-15  Gil Forcada  <gforcada@svn.gnome.org>
+
 	* data/main.css:
 	Added a new class that puts a GNOME foot in the lists
 	* templates/list-releases.tmpl:
